--- a/src/components/Hero/Hero.module.scss
+++ b/src/components/Hero/Hero.module.scss
@@ -1,3 +1,5 @@
+@use '../../utils/variables';
+
 .Hero__section {
   background: url('/grocery.webp');
   background-size: cover;
@@ -38,4 +40,8 @@
   border-bottom-left-radius: 0px !important;
   padding: 10px 22px !important;
   text-transform: none !important;
+  background-color: variables.$color-accent !important;
+  &:focus {
+    outline: none;
+  }
 }
