--- a/src/utils/_variables.scss
+++ b/src/utils/_variables.scss
@@ -1,1 +1,4 @@
 $color-accent: rgb(0,159,127);
+$color-light-gray: rgb(243,244,246);
+$color-text-heading: rgb(31,41,55);
+$color-dark-gray: rgb(243,244,246);
