updated product details popup UI

--- a/src/utils/_variables.scss
+++ b/src/utils/_variables.scss
@@ -2,3 +2,5 @@ $color-accent: rgb(0,159,127);
 $color-light-gray: rgb(243,244,246);
 $color-text-heading: rgb(31,41,55);
 $color-dark-gray: rgb(243,244,246);
+$color-border-white: rgb(229,231,235);
+$color-text-base: rgb(107,114,128);
