--- a/src/components/Products/Product/Product.module.scss
+++ b/src/components/Products/Product/Product.module.scss
@@ -14,6 +14,8 @@
 .Product {
   background-color: white;
   padding: 15px 10px;
+  border: 1px solid variables.$color-border-white;
+  border-radius: 5px;
 }
 
 .Price {
