PB-1: added cart functionality

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -23,6 +23,10 @@
 
 .AppBar {
   background-color: #fafafa !important;
+  box-shadow: none !important;
+  &__scrolled {
+    box-shadow: 0px 2px 4px -1px rgba(0,0,0,0.2), 0px 4px 5px 0px rgba(0,0,0,0.14), 0px 1px 10px 0px rgba(0,0,0,0.12) !important;
+  }
 }
 
 .NavItems {
@@ -31,4 +35,8 @@
   &:focus {
     outline: none;
   }
+}
+
+.Toolbar {
+  justify-content: space-between;
 }
