--- a/src/utils/_variables.scss
+++ b/src/utils/_variables.scss
@@ -1,4 +1,5 @@
 $color-accent: rgb(0,159,127);
+$color-accent-dark: rgb(11 138 112);
 $color-light-gray: rgb(243,244,246);
 $color-text-heading: rgb(31,41,55);
 $color-dark-gray: rgb(243,244,246);
