--- a/src/components/Cart/Cart.module.scss
+++ b/src/components/Cart/Cart.module.scss
@@ -121,6 +121,8 @@
   display: flex;
   flex-direction: column;
   flex: 1;
+  overflow-y: auto;
+  max-width: calc(100vh - 140px);
 }
 
 .Cart__footer {
