--- a/src/components/UpdateProfilePopup/UpdateProfilePopup.module.scss
+++ b/src/components/UpdateProfilePopup/UpdateProfilePopup.module.scss
@@ -32,7 +32,7 @@
 .Form__container {
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 25px;
   padding: 20px 0px;
 }
 
@@ -40,4 +40,23 @@
   display: flex;
   justify-content: flex-end;
   gap: 20px;
+}
+
+.Preview__img {
+  max-width: 100%;
+  height: 150px;
+  object-fit: contain;
+}
+
+.Preview {
+  padding: 10px 0px;
+  position: relative;
+}
+
+.Cancel__icon {
+  font-size: 30px;
+  color: rgb(236, 107, 107);
+  position: absolute;
+  top: 0;
+  cursor: pointer;
 }
