--- a/src/pages/Profile/Profile.module.scss
+++ b/src/pages/Profile/Profile.module.scss
@@ -4,7 +4,7 @@
   width: 100vw;
   height: calc(100vh - 64px);
   display: flex;
-  padding: 5% 10% 5% 10%;
+  padding: 4rem 10rem;
   gap: 30px;
   background-color: variables.$color-dark-bg;
 }
