--- a/src/pages/Wishlists/Wishlists.module.scss
+++ b/src/pages/Wishlists/Wishlists.module.scss
@@ -17,3 +17,42 @@
   border-radius: 5px;
   box-shadow: variables.$white-card-shadow;
 }
+
+.Wishlists__title {
+  padding: 20px 0px 30px 0px;
+  text-align: center;
+}
+
+.Wishlist {
+  display: flex;
+  justify-content: space-between;
+  padding: 10px 15px;
+  align-items: center;
+}
+
+.Wishlist__left {
+  display: flex;
+  gap: 10px;
+  &__img {
+    height: 70px;
+    width: 60px;
+    object-fit: cover;
+  }
+}
+
+.Action__btns {
+  gap: 10px;
+}
+
+.Btn {
+  &__AddToCart__Btn {
+    color: variables.$color-accent !important;
+  }
+}
+
+.Discount__price {
+  color: variables.$color-text-base !important;
+  margin-left: 5px;
+  text-decoration: line-through;
+  font-size: 12px !important;
+}
