PB-7: updated login and logout styles

--- a/src/pages/Register/Register.module.scss
+++ b/src/pages/Register/Register.module.scss
@@ -33,7 +33,7 @@
 }
 
 .Register__title {
-  margin: 20px 0px !important;
+  margin:  15px 0px 45px 0px!important;
   font-style: italic;
   color: variables.$color-text-base;
 }
