--- a/src/pages/Login/Login.module.scss
+++ b/src/pages/Login/Login.module.scss
@@ -33,7 +33,7 @@
 }
 
 .Login__title {
-  margin: 20px 0px !important;
+  margin:  15px 0px 45px 0px!important;
   font-style: italic !important;
   color: variables.$color-text-base;
 }
