--- a/src/pages/Checkout/Checkout.module.scss
+++ b/src/pages/Checkout/Checkout.module.scss
@@ -36,24 +36,22 @@
   gap: 10px;
   display: flex;
   flex-direction: column;
-  flex: 1;
   padding: 30px;
   border-radius: 10px;
 }
 
 .Checkout__container {
-  height: calc(100vh - 64px);
+  min-height: calc(100vh - 64px);
   width: 100vw;
   display: flex;
   justify-content: center;
-  align-items: center;
-  background-color: rgb(243,244,246);
+  padding: 4rem 0rem;
+  background-color: rgb(243, 244, 246);
 }
 
 .Checkout__content {
   display: flex;
-  width: 80%;
-  height: 75%;
+  width: 100%;
   justify-content: center;
   gap: 50px;
 }
@@ -68,11 +66,20 @@
 
 .Checkout__form, .Order {
   background-color: white;
-  height: 100%;
 }
 
-.CheckoutForm__container, .CheckoutOrder__container {
-  width: 510px;
+.CheckoutForm__container {
+  width: 30%;
+}
+
+.CheckoutOrder__container {
+  width: 25%;
+}
+
+.CheckoutForm__container {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
 }
 
 .CheckoutOrder__container {
@@ -91,14 +98,6 @@
   border-bottom: 1px solid rgb(224, 213, 213);
 }
 
-.InpputIn__row {
-  display: flex;
-  gap: 10px;
-  &__textfield {
-    width: 50%;
-  }
-}
-
 .Notes {
   background-color: white !important;
   color: black !important;
@@ -111,4 +110,89 @@
   display: flex;
   justify-content: space-between;
   font-weight: bold !important;
+}
+
+.Contact__container {
+  background-color: white;
+  padding: 2rem;
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.Contact__container__top {
+  display: flex;
+  justify-content: space-between;
+}
+
+.Contact__top__left {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+
+.Number {
+  background-color: variables.$color-accent;
+  width: 30px;
+  height: 30px;
+  border-radius: 222220px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+}
+
+.UpdateBtn {
+  color: variables.$color-accent !important;
+}
+
+.Address {
+  display: flex;
+  flex-direction: column;
+  cursor: pointer;
+  width: 200px;
+  border: 1px solid variables.$color-accent;
+  padding: 10px;
+  border-radius: 5px;
+}
+
+.Address:hover {
+  .Btn__container {
+    display: block;
+  }
+}
+
+.Address__top {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 30px;
+}
+
+.Edit__btn, .Delete__btn {
+  font-size: 25px;
+  padding: 4px;
+}
+
+.Edit__btn {
+  background-color: variables.$color-accent !important;
+  color: white;
+  border-radius: 22222px;
+  margin-right: 10px;
+}
+
+.Delete__btn {
+  background-color: red;
+  color: white;
+  border-radius: 222222px;
+}
+
+.Btn__container {
+  display: none;
+  transition: .1s ease-in-out display;
+}
+
+.Btn {
+  padding: 0px !important
 }
