PB-41: add redux saga settings and integrated login, logout api

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -40,3 +40,8 @@
 .Toolbar {
   justify-content: space-between;
 }
+
+.Login__btn {
+  background-color: variables.$color-accent !important;
+  color: white !important;
+}
