--- a/src/pages/Register/Register.module.scss
+++ b/src/pages/Register/Register.module.scss
@@ -14,7 +14,7 @@
 }
 
 .Register__page {
-  height: calc(100vh - 64px);
+  height: 100vh;
   width: 100vw;
   background-color: variables.$color-dark-bg;
   display: flex;
