PB-42: integrated address add and remove between frontend and backend

--- a/src/pages/Profile/Profile.module.scss
+++ b/src/pages/Profile/Profile.module.scss
@@ -146,3 +146,14 @@
   gap: 20px;
   flex-wrap: wrap;
 }
+
+.Btn__container {
+  display: none;
+  transition: .1s ease-in-out display;
+}
+
+.Address:hover {
+  .Btn__container {
+    display: block;
+  }
+}
