--- a/src/pages/Orders/Orders.module.scss
+++ b/src/pages/Orders/Orders.module.scss
@@ -2,7 +2,7 @@
 
 .OrdersPage {
   width: 100vw;
-  height: calc(100vh - 64px);
+  min-height: calc(100vh - 64px);
   display: flex;
   padding: 4rem 10rem;
   gap: 30px;
@@ -18,7 +18,7 @@
 
 .OrderDetails {
   padding: 2%;
-  width: 60%;
+  width: 50%;
   background-color: white;
   border-radius: 5px;
   box-shadow: variables.$white-card-shadow;
@@ -93,11 +93,6 @@
   padding: 27px 0px 0px 0px;
 }
 
-.Address {
-  width: 60%;
-  border-right: 1px solid variables.$color-border-white;
-}
-
 .Payment {
   width: 40%;
   padding-left: 20px;
@@ -159,4 +154,20 @@
   display: flex;
   justify-content: space-between;
   margin: 2rem 0;
+}
+
+.EmptyOrder__box {
+  width: 80%;
+  justify-content: center;
+  align-items: center;
+  height: 50%;
+  box-shadow: variables.$white-card-shadow;
+  background-color: white;
+}
+
+.Address__container {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  width: 60%;
 }
