--- a/src/utils/_variables.scss
+++ b/src/utils/_variables.scss
@@ -9,4 +9,7 @@ $color-dark-bg: rgb(243,244,246);
 $white-card-shadow: (0 0 #0000,0 0 #0000), (0 0 #0000,0 0 #0000), 0 1px 3px 0 rgba(0,0,0,.1),0 1px 2px -1px rgba(0,0,0,.1);
 $color-order-processing: rgba(196, 153, 30,1.1);
 $color-order-completed: rgba(0,161,127,1);
-$color-order-canceled: rgba(227,110,1);
+$color-order-pending: rgba(227,110,1);
+$dark-box-shadow: (0 0 #0000, 0 0 #0000), (0 0 #0000,0 0 #0000), (0 1px 3px 0 rgba(0,0,0,.1),0 1px 2px -1px rgba(0,0,0,.1));
+$color-order-canceled: rgb(227, 51, 51);
+$color-order-local: rgb(54, 124, 109);
