--- a/src/pages/Checkout/Checkout.module.scss
+++ b/src/pages/Checkout/Checkout.module.scss
@@ -154,9 +154,13 @@
   flex-direction: column;
   cursor: pointer;
   width: 200px;
-  border: 1px solid variables.$color-accent;
   padding: 10px;
   border-radius: 5px;
+  background-color: variables.$color-dark-bg;
+  border: 1px solid transparent;
+  &__active {
+    border: 1px solid variables.$color-accent;
+  }
 }
 
 .Address:hover {
