--- a/src/pages/Orders/Orders.module.scss
+++ b/src/pages/Orders/Orders.module.scss
@@ -160,9 +160,13 @@
   width: 80%;
   justify-content: center;
   align-items: center;
-  height: 50%;
   box-shadow: variables.$white-card-shadow;
   background-color: white;
+}
+
+.Back__btn {
+  background-color: variables.$color-accent !important;
+  margin-top: 10px !important;
 }
 
 .Address__container {
