--- a/src/pages/Wishlists/Wishlists.module.scss
+++ b/src/pages/Wishlists/Wishlists.module.scss
@@ -12,7 +12,6 @@
 .Wishlists {
   padding: 2%;
   width: 80%;
-  height: 80%;
   background-color: white;
   border-radius: 5px;
   box-shadow: variables.$white-card-shadow;
@@ -56,4 +55,16 @@
   margin-left: 5px;
   text-decoration: line-through;
   font-size: 12px !important;
+}
+
+.EmptyOrder__box {
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+}
+
+.Back__btn {
+  background-color: variables.$color-accent !important;
+  margin-top: 10px !important;
 }
