--- a/src/pages/Wishlists/Wishlists.module.scss
+++ b/src/pages/Wishlists/Wishlists.module.scss
@@ -68,3 +68,17 @@
   background-color: variables.$color-accent !important;
   margin-top: 10px !important;
 }
+
+.Loading__container {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  gap: 20px;
+}
+
+.Skeleton__top {
+  display: flex;
+  gap: 20px;
+  align-items: center;
+}
