update product card button, styles

--- a/src/components/Cart/Cart.module.scss
+++ b/src/components/Cart/Cart.module.scss
@@ -164,3 +164,11 @@
   color: variables.$color-accent;
   margin-bottom: 20px;
 }
+
+.Total__price {
+  background-color: white;
+  padding: 4px 14px;
+  border-radius: 5px;
+  color: rgb(0, 159, 127);
+  margin-top: 5px;
+}
