--- a/src/components/Cart/Cart.module.scss
+++ b/src/components/Cart/Cart.module.scss
@@ -4,14 +4,17 @@
   position: fixed !important;
   top: 45%;
   right: 0;
-  display: flex !important;
   flex-direction: column;
   text-transform: capitalize !important;
   border-top-right-radius: 0px !important;
   border-bottom-right-radius: 0px !important;
   z-index: 100;
   height: 100px;
+  cursor: pointer;
   padding: 0px 15px !important;
+  align-items: center;
+  justify-content: center;
+  border-radius: 5px;
   background-color: variables.$color-accent !important;
   &:focus {
     outline: none;
@@ -22,6 +25,7 @@
   display: flex;
   align-items: center;
   gap: 5px;
+  color: white;
 }
 
 .Cart__top {
