--- a/src/components/ProfileSidebar/ProfileSidebar.module.scss
+++ b/src/components/ProfileSidebar/ProfileSidebar.module.scss
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   padding: 30px 0px !important;
-  width: 20%;
+  width: 320px;
   border-radius: 5px;
   background-color: white;
   box-shadow: variables.$white-card-shadow;
