--- a/src/pages/Profile/Profile.module.scss
+++ b/src/pages/Profile/Profile.module.scss
@@ -4,7 +4,7 @@
   width: 100vw;
   min-height: calc(100vh - 64px);
   display: flex;
-  padding: 4rem 10rem;
+  padding: 4% 8%;
   gap: 30px;
   background-color: variables.$color-dark-bg;
 }
@@ -26,7 +26,7 @@
 .Profile__btn {
   background-color: variables.$color-accent !important;
   color: white !important;
-  width: 20%;
+  width: 130px;
 }
 
 .Details__text {
@@ -92,7 +92,7 @@
 .ProfileInfo__container {
   display: flex;
   flex-direction: column;
-  width: 80%;
+  width: calc(100% - 320px);
   gap: 2rem;
 }
 
