PB-62: added responsiveness in change password page

--- a/src/pages/ChangePassword/ChangePassword.module.scss
+++ b/src/pages/ChangePassword/ChangePassword.module.scss
@@ -4,15 +4,13 @@
   width: 100vw;
   height: calc(100vh - 64px);
   display: flex;
-  padding: 4rem 10rem;
+  padding: 4% 8%;
   gap: 30px;
   background-color: variables.$color-dark-bg;
 }
 
 .ChangePassword {
-  padding: 2%;
-  width: 80%;
-  height: 100%;
+  padding: 2% 4%;
   background-color: white;
   border-radius: 5px;
   box-shadow: variables.$white-card-shadow;
