--- a/src/pages/Orders/Orders.module.scss
+++ b/src/pages/Orders/Orders.module.scss
@@ -2,7 +2,6 @@
 
 .OrdersPage {
   width: 100vw;
-  min-height: calc(100vh - 64px);
   display: flex;
   padding: 2%;
   gap: 30px;
@@ -153,6 +152,7 @@
   display: flex;
   justify-content: space-between;
   margin: 2rem 0;
+  align-items: center;
 }
 
 .EmptyOrder__box {
