--- a/src/pages/OrderDetails/OrderDetails.module.scss
+++ b/src/pages/OrderDetails/OrderDetails.module.scss
@@ -4,7 +4,7 @@
   width: 100vw;
   min-height: calc(100vh - 64px);
   display: flex;
-  padding: 4rem 10rem;
+  padding: 3% 8%;
   background-color: rgb(243, 244, 246);
   flex-direction: column;
   align-items: center;
@@ -18,7 +18,7 @@
 }
 
 .OrderDetails {
-  width: 75%;
+  width: 80%;
   background-color: white;
   border-radius: 5px;
   box-shadow: variables.$white-card-shadow;
@@ -164,6 +164,7 @@
 
 .BackToHome__div {
   width: 100%;
+  margin-bottom: 10px;
 }
 
 .BackToHome__btn {
@@ -174,14 +175,7 @@
   padding: 1rem 1.25rem;
   border-radius: 2px;
   box-shadow: variables.$white-card-shadow;
-  width: 220px;
   border: 1px solid rgba(229,231,235, 1);
-}
-
-.Order__cards {
-  display: flex;
-  justify-content: space-between;
-  padding: 20px 0px;
 }
 
 .Card__value {
