PB-68: added search functionality in header search input

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -12,6 +12,10 @@
   padding-bottom: 15px;
 }
 
+.Search__form {
+  width: 100%;
+}
+
 .Search__input {
   width: 276px;
   background-color: variables.$color-dark-gray;
