PB-67: Added load more button with styles in wishlist page

--- a/src/pages/Wishlists/Wishlists.module.scss
+++ b/src/pages/Wishlists/Wishlists.module.scss
@@ -9,6 +9,10 @@
   background-color: variables.$color-dark-bg;
 }
 
+.LoadMore__btn {
+  background-color: variables.$color-accent !important;
+}
+
 .Wishlists {
   padding: 2%;
   background-color: white;
