--- a/src/pages/Login/Login.module.scss
+++ b/src/pages/Login/Login.module.scss
@@ -78,3 +78,15 @@
     text-decoration-line: none !important;
   }
 }
+
+.Error_message {
+  color: red;
+  margin: 0;
+  padding: 0;
+  font-size: 12px;
+  margin-top: 5px;
+}
+
+.Login__form {
+  width: 100%;
+}
